# thorvg

./: .gitignore  CMakeLists.txt  README.md
cmake/: Utils.cmake  thorvgConfig.cmake.in  tvgcanvasConfig.cmake.in
inc/: config.h  tvg_config.h
pc/: thorvg.pc.in  tvgcanvas.pc.in
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/bindings/capi/: tvgCapi.cpp
src/lib/: CMakeLists.txt  tvgCommon.h  tvgInitializer.cpp  tvgLoaderMgr.cpp  tvgTaskScheduler.cpp  tvg_config.h
src/lib/gl_engine/: CMakeLists.txt
src/lib/sw_engine/: tvgSwMemPool.cpp  tvgSwRenderer.cpp
src/loaders/: CMakeLists.txt
src/loaders/raw/: CMakeLists.txt
src/loaders/svg/: CMakeLists.txt
test/: test_canvas.cpp  test_paint.cpp
